# vision-mcp

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  hermes-integration.md  implementation-plan.md  roadmap.md  tool-spec.md
scripts/: demo.sh  run_local.sh  start.sh
src/vision_mcp/: __init__.py  __main__.py  orchestrator.py  schema.py  server.py
src/vision_mcp/backends/: __init__.py  base.py  grounding_backend.py  moondream_backend.py  opencv_backend.py  paddleocr_backend.py  sam_backend.py  yolo_backend.py
src/vision_mcp/core/: io.py
src/vision_mcp/tools/: __init__.py  detection.py  grounding.py  image_ops.py  ocr_tools.py  segmentation.py  vlm_tools.py
tests/: test_detection.py  test_image_ops.py  test_ocr.py  test_vlm.py
